--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-image": "^4.0.3",
     "react-scripts": "4.0.1",
     "react-slideshow-image": "^3.4.3",
     "web-vitals": "^0.2.4"
