--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-image": "^4.0.3",
+    "react-redux-webaudio": "^2.0.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-slideshow-image": "^3.4.3",
     "web-vitals": "^0.2.4"
