Adding cursor animation

--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "custom-cursor-react": "^1.0.5",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-animated-cursor": "^2.1.8",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^1.4.3",
+    "react-cursor": "^2.0.15",
+    "react-cursor-custom": "^1.2.4",
     "react-dom": "^17.0.1",
     "react-image": "^4.0.3",
     "react-redux-webaudio": "^2.0.0",
